[project]
name = "vidtoolz-concat"
version = "0.0.1"
description = "Concat videos using ffmpeg "
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-concat"
Changelog = "https://github.com/sukhbinder/vidtoolz-concat/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-concat/issues"
CI = "https://github.com/sukhbinder/vidtoolz-concat/actions"

[project.entry-points."vidtoolz_plugins"]
concat = "vidtoolz_concat:concat_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
